--- a/src/UILibrary/grid/UIFlex.css
+++ b/src/UILibrary/grid/UIFlex.css
@@ -1,3 +1,4 @@
 .flex {
   position: relative;
+  min-width: 0;
 }
